# Hunty-contract

./: .env.example  .env.mainnet  .env.staging  .env.testnet  .gitignore  CHANGELOG.md  COMPLETE_TEST_SUMMARY.md  COMPLETION_REPORT.md  CONTRIBUTING.md  CROSS_CONTRACT_COMPLETION_REPORT.md  CROSS_CONTRACT_INTEGRATION_TESTS.md  CROSS_CONTRACT_QUICK_REFERENCE.md  Cargo.toml  DELIVERABLES.md  DEVELOPMENT.md  GITHUB_ISSUES.md  IMPLEMENTATION_SUMMARY_158.md  ISSUE_88_PLACEHOLDER.md  ISSUE_89_PLACEHOLDER.md  Makefile  QUICK_START_TESTING.md  README.md  REQUIRED_CLUES_IMPLEMENTATION_SUMMARY.md  REQUIRED_CLUES_VALIDATION_TESTS.md  STORAGE_KEYS.md  STORAGE_LIMITS_TESTS.md  TODO.md  cargo_check_errors.txt  commitlint.config.js  issue.md  package-lock.json  package.json  push_pr_demo.ipynb  tarpaulin.toml  test_create_out.txt  test_out.txt
contracts/hunty-core/: Cargo.toml
contracts/hunty-core/src/: admin.rs  errors.rs  lib.rs  migration.rs  rate_limit.rs  sanitization.rs  storage.rs  test.rs  test.rs.rej  types.rs
contracts/hunty-core/test_snapshots/: test_cancel_hunt_with_reward_pool_refund.1.json
contracts/hunty-core/test_snapshots/test/: test_get_hunt_statistics_mixed_completion_states.1.json
contracts/hunty-core/tests/: cross_contract_integration.rs  required_clues_validation.rs  storage_limits.rs  test.rs  testnet_hunt_lifecycle.rs
contracts/nft-reward/: Cargo.toml
contracts/nft-reward/src/: admin.rs  errors.rs  lib.rs  migration.rs  msg.rs  sanitization.rs  state.rs  storage.rs  test.rs
contracts/nft-reward/test_snapshots/test/: test_burn_removes_nft_from_hunt_index.1.json  test_fresh_mint_gets_current_schema_version.1.json  test_get_hunt_nft_count_tracks_mints_per_hunt.1.json  test_get_nft_metadata_returns_complete_info.1.json  test_get_nft_owner_matches_owner_of.1.json  test_get_nfts_by_hunt_pagination.1.json  test_get_nonexistent_nft_returns_none.1.json  test_get_player_nfts_empty_for_new_address.1.json  test_initial_ownership_set_correctly.1.json  test_initialize_cannot_be_called_twice.1.json  test_initialize_requires_auth.1.json  test_legacy_nft_without_version_key_defaults_to_v1.1.json  (+20 more)
contracts/reward-manager/: Cargo.toml
contracts/reward-manager/src/: admin.rs  errors.rs  lib.rs  migration.rs  monitoring.rs  nft_handler.rs  storage.rs  test.rs  types.rs  xlm_handler.rs
(+227 files in other folders)
