[package]
name = "hunty-core"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
reward_manager = { path = "../reward-manager", package = "reward-manager" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
nft_reward = { path = "../nft-reward", package = "nft-reward" }

