[package]
name = "nft-reward"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
hunty-migration = { path = "../migration", package = "hunty-migration" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

