[package]
name = "reward-manager"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
nft-reward = { path = "../nft-reward" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

