[package]
name = "reward-manager"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
reward-interface = { path = "../reward-interface" }
nft-reward = { path = "../nft-reward" }
hunty-migration = { path = "../migration", package = "hunty-migration" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

